fix: correct scrollbar styles in firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scrollbar-color: #f05454 #30475e !important;
+  scrollbar-width: thin !important;
 }
 
 ::-webkit-scrollbar {
